--- a/index.html
+++ b/index.html
@@ -25,29 +25,27 @@
     </div>
   </nav>
 
-  <!-- Contenu principal -->
-  <main >
-    <!-- Carte -->
-    <div >
-      <h2 >Liste de Courses</h2>
-      <ul >
-        <li >
+  <main class="container mx-auto px-4 py-8">
+    <div class="bg-white rounded-lg shadow p-6">
+      <h2 class="text-xl font-semibold mb-4">Liste de Courses</h2>
+      <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
+        <li class="bg-gray-100 px-4 py-2 rounded-md flex justify-between">
           <span>Œufs</span>
           <span>12</span>
         </li>
-        <li >
+        <li class="bg-gray-100 px-4 py-2 rounded-md flex justify-between">
           <span>Pommes de terre</span>
           <span>5 kg</span>
         </li>
-        <li >
+        <li class="bg-gray-100 px-4 py-2 rounded-md flex justify-between">
           <span>Lait</span>
           <span>2 litres</span>
         </li>
-        <li >
+        <li class="bg-gray-100 px-4 py-2 rounded-md flex justify-between">
           <span>Pain</span>
           <span>1</span>
         </li>
-        <li >
+        <li class="bg-gray-100 px-4 py-2 rounded-md flex justify-between">
           <span>Fromage</span>
           <span>200 g</span>
         </li>
